2015-10-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Declare const arg for brk_pool_match().

	* src/thbrk/brk-maximal.c (brk_pool_match):
	  - Add const-ness to the read-only 'node' arg.

2015-10-11  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Minor optimization on brk_pool_match().

	Callgrind reports brk_pool_match() among top bottlenecks.
	So, try to optimize it as we can.

	* src/thbrk/brk-maximal.c (brk_pool_match):
	  - Instead of sharing the loop for two different cases,
	    check the case once and run loop for each case separately,
	    to minimize branching down to a single time.
	  - Evaluate the unchanged 'node->shot.brk_pos[node_cur_pos - 1]'
	    expression only once, instead of on every round.

	This appears to save time by 9.3% for total brk_pool_match() calls,
	and by 0.067% of total run time.

2015-10-11  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix 'make check' error on long path names.

	* tests/thsort.c (main):
	  - Increase file name buffers from 64 to 512, to afford long path
	    names in command-line arguments.

2015-10-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Replace static global free-list with local one.

	The static global free-list in brk-maximal.c makes it not
	thread-safe.

	* src/thbrk/brk-maximal.c:
	  - Add type BrkEnv to keep break pool free list, with
	    brk_env_init() and brk_env_destroy() methods.
	  - (brk_pool_node_new, brk_pool_node_free, brk_pool_free,
	     brk_pool_delete, brk_root_pool, brk_recover_try,
	     brk_recover):
	    Add (BrkEnv *) arg to relevant functions and use it properly.
	  - (brk_maximal_do):
	    Create and destroy BrkEnv instance for use locally.
	    Pass it to the required function calls.
	  - (brk_pool_delete -> brk_pool_delete_node):
	    Rename function to avoid confusion with brk_pool_free().

	* src/thbrk/brk-maximal.c:
	* src/thbrk/brk-maximal.h:
	* src/thbrk/thbrk.c:
	  - Get rid of now-unnecessary brk_maximal_init() and
	    brk_maximal_quit().
